Fixed How it works alignment

--- a/src/components/marketing-site/HowItWorks/index.module.scss
+++ b/src/components/marketing-site/HowItWorks/index.module.scss
@@ -4,7 +4,6 @@
 }
 
 .panel {
-    margin: 2rem 0;
     padding: 3rem 1rem;
 }
 
